Pagina de registro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <!-- Strings related to login -->
     <string name="prompt_email">  Email</string>
     <string name="prompt_password">  Contraseña </string>
+    <string name="Terminos">Acepto las <a>condiciones legales</a> y la <a>política de privacidad</a></string>
 </resources>
