--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="Descripcion"> <b>DESCRIPCIÓN </b> \nSomos una franquicia de barberías premium. Estamos ubicados en Santa Ana y Heredia. \nReservas Whatsapp: 7222:4014</string>
     <string name="Contacto"><b>CONTACTO</b></string>
     <string name="Numero"><a href=""><b>  22829922</b></a></string>
+    <string name="VServicio"><a><b>Ver Servicios ></b></a></string>
     <string name="Horario"><b>HORARIO DEL CENTRO</b>\n
         <b>Lunes:  </b> \n
         <b>Martes: </b>  \n
